# os_labs

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: parent.hpp  utils.hpp
lab1/src/: child.cpp  parent.cpp  utils.cpp
